Pushing new content

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,1 +1,10 @@
 // Sass Variables
+
+// Colors
+$dark-purple : #3D348B;
+$medium-purple : #7678ED;
+$light-orange : #F7B801;
+$medium-orange : #F18701;
+$dark-orange : #F35B04;
+
+
