--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-nav-bar></app-nav-bar>
-<h1>Welcome to Sauce Boss</h1>
-<p>Your personalized pomodoro timer</p>
+<app-header></app-header>
 <router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
