New Pomodoro and timer

--- a/src/app/components/pomodoro-timer/pomodoro-timer.component.html
+++ b/src/app/components/pomodoro-timer/pomodoro-timer.component.html
@@ -4,23 +4,21 @@
 <div style="background-color: beige; align-items: center;justify-content: center; display: flex;">
     <div class="pomodoro-growing-timer" style="height: 500px; width: 500px;justify-content: center;">
         <div name="tomatoe"
-        id="tomatoe"
-        style="width: 250px; height: 250px; justify-self: center; background-color: green;"
         [@enlarge]="{ 
             value: _startTimer, 
             params: {
-                startWidth: 30 + getPercentCompleted(),
-                startHeight: 30 + getPercentCompleted(),
+                startWidth: 30 + getPercentLeft(),
+                startHeight: 30 + getPercentLeft(),
                 endWidth: 100,
                 endHeight: 100,
-                animateTime: (timeToEnlarge - timeCompletedSeconds * 1000) + 'ms'
+                animateTime: getAnimateTime()
             }
         }" [@colorChange]="{ 
             value: _startTimer, 
             params: {
                 startColor: 'green',
                 endColor: 'red',
-                animateTime: (timeToEnlarge - timeCompletedSeconds * 1000) + 'ms'
+                animateTime: getAnimateTime()
             }
         }" style="background-color: red; border-radius: 50%;">
             
@@ -28,13 +26,13 @@
         <div name="stem" [@enlarge]="{ 
             value: _startTimer, 
             params: {
-                startWidth: 30 + getPercentCompleted(),
-                startHeight: 30 + getPercentCompleted(),
+                startWidth: 30 + getPercentLeft(),
+                startHeight: 30 + getPercentLeft(),
                 endWidth: 100,
                 endHeight: 100,
-                animateTime: (timeToEnlarge - timeCompletedSeconds * 1000) + 'ms'
+                animateTime: getAnimateTime()
             }
-        }" style="position:absolute; top:0; left: 0; transform: rotate(-10deg);justify-self: center;">
+        }" style="position:absolute; top:0; transform: rotate(-10deg);justify-self: center;">
             <img src="../../../assets/svgs/stem.svg">    
         </div>
         
@@ -43,7 +41,3 @@
         </div>
     </div>
 </div>
-<div>{{ timeCompletedSeconds }}</div>
-<button [disabled]="_startTimer == 'start'" type="button" (click)="startTimer()">Start Saucin'</button>
-<button [disabled]="_startTimer == 'stop'" type="button" (click)="stopTimer()">Stop Saucin'</button>
-<button type="button" (click)="resetTimer()">Reset</button>
