--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 
 // Components
 @import './components/pomodoro-timer';
+@import './components/tomatoe-timer';
 // Layouts
 @import './layouts/header';
 
