--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,2 +1,9 @@
 <p>home-page works!</p>
-<app-pomodoro-timer></app-pomodoro-timer>
+<app-pomodoro-timer [_startTimer]="_startTimer"></app-pomodoro-timer>
+<!-- <app-tomatoe-timer></app-tomatoe-timer> -->
+<div>{{ currentTime | async | timestamp : 'hour' }} : {{ currentTime | async | timestamp : 'minute' }} : {{ currentTime | async | timestamp : 'second' }}</div>
+<div></div>
+<div>{{ _startTimer }}</div>
+<button [disabled]="_startTimer == 'start'" type="button" (click)="startTimer()">Start Saucin'</button>
+<button [disabled]="_startTimer == 'stop'" type="button" (click)="stopTimer()">Stop Saucin'</button>
+<button type="button" (click)="resetTimer()">Reset</button>
