--- a/src/app/pages/settings-page/settings-page.component.html
+++ b/src/app/pages/settings-page/settings-page.component.html
@@ -1,1 +1,4 @@
 <p>settings works!</p>
+<div [formGroupName]="settingsFormGroup">
+    <input formControlName="pomodoroDuration" type='range' min='0' max='100' value='50' id="pomodoro-duration">
+</div>
