New navbar styles

--- a/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/src/app/layouts/nav-bar/nav-bar.component.html
@@ -1,8 +1,8 @@
-<div class="row mt-4 mb-4">
+<div class="nav-bar-container row no-gutters">
     <div class="col d-flex justify-content-center">
-        <i class="fas fa-home" routerLink="/home"></i>
+        <i class="bi bi-house-fill p-4 nav-bar-home" routerLink="/home"></i>
     </div>
     <div class="col d-flex justify-content-center">
-        <i class="fas fa-cog" routerLink="/settings"></i>
+        <i class="bi bi-gear-fill p-4 nav-bar-settings" routerLink="/settings"></i>
     </div>
 </div>
