--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,8 +8,9 @@
 @import './components/tomatoe-timer';
 // Layouts
 @import './layouts/header';
-
+@import './layouts/nav-bar';
+@import './layouts/root';
 // Pages
-
+@import './pages/home-page';
 // Themes
 
