--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="root-container">
+    <div class="root-card">
+        <router-outlet></router-outlet>
+    </div>
+</div>
 <app-nav-bar></app-nav-bar>
