--- a/src/app/components/pomodoro-timer/pomodoro-timer.component.html
+++ b/src/app/components/pomodoro-timer/pomodoro-timer.component.html
@@ -1,7 +1,7 @@
 <!--
     The SVG is the stem
 -->
-<div style="background-color: beige; align-items: center;justify-content: center; display: flex;">
+<div style="align-items: center;justify-content: center; display: flex;">
     <div class="pomodoro-growing-timer" style="height: 500px; width: 500px;justify-content: center;">
         <div name="tomatoe"
         [@enlarge]="{ 
