--- a/src/app/components/tomatoe-timer/tomatoe-timer.component.html
+++ b/src/app/components/tomatoe-timer/tomatoe-timer.component.html
@@ -1,11 +1,12 @@
-<!-- <p>tomatoe-timer works!</p> -->
 <!-- <?xml version="1.0" encoding="UTF-8" standalone="no"?> -->
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
+<!-- Changes -->
+<!-- viewbox="0 0 11.482917 10.318749" -->
 <svg
-   width="11.482917cm"
-   height="10.318749cm"
-   viewBox="0 0 11.482917 10.318749"
+   width="100%"
+   height="100%"
+   viewBox="-1 -2 14 14"
    version="1.1"
    id="svg5"
    inkscape:version="1.1 (c68e22c387, 2021-05-23)"
