--- a/src/styles/layouts/_root.scss
+++ b/src/styles/layouts/_root.scss
@@ -5,6 +5,7 @@
     margin: 5% 5% 10rem 5%;
     box-shadow: 0px 4px 10px 2px grey;
     padding: 3%;
+    min-height: 50vh;
 }
 
 .root-container {
