style updates v2 for app

--- a/src/app/layouts/nav-bar/nav-bar.component.html
+++ b/src/app/layouts/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="nav-bar-container row no-gutters">
+<div class="nav-bar-container row g-0">
     <div class="col d-flex justify-content-center">
         <i class="bi bi-house-fill p-4 nav-bar-home" routerLink="/home"></i>
     </div>
