--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,10 +1,13 @@
 // Sass Variables
 
 // Colors
-$dark-purple : #3D348B;
-$medium-purple : #7678ED;
-$light-orange : #F7B801;
-$medium-orange : #F18701;
-$dark-orange : #F35B04;
+$secondary-dark : #3f4cba;
+$secondary : #7678ED;
+$secondary-light: #aba7ff;
+$primary-dark : #b82600;
+$primary-light : #ff8d3e;
+$primary: #F35B04;
+$white-dark: #e6e6e6;
+$white-light: #fefefe;
 
 
