--- a/src/styles/layouts/_nav-bar.scss
+++ b/src/styles/layouts/_nav-bar.scss
@@ -2,16 +2,16 @@
     position: fixed;
     height: 6rem;
     bottom: 0;
-    background-color: $dark-purple;
-    width: 100vw;
+    background-color: $secondary-dark;
+    width: 100%;
 }
 
 .nav-bar-home {
-    color: $medium-purple;
+    color: $secondary-light;
     font-size: 2rem;
 }
 
 .nav-bar-settings {
-    color: $medium-purple;
+    color: $secondary-light;
     font-size: 2rem;
 }
