--- a/src/app/layouts/header/header/header.component.html
+++ b/src/app/layouts/header/header/header.component.html
@@ -1,3 +1,3 @@
-<div class="header">
-    <h3 class="d-flex justify-content-center">Sauce Boss</h3>
+<div class="header row g-0">
+    <h1 class="col d-flex justify-content-center">Sauce Boss</h1>
 </div>
