--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,9 +1,8 @@
 <app-pomodoro-timer *ngIf="currentTime.value >= 0" [_startTimer]="_startTimer"></app-pomodoro-timer>
 <app-tomatoe-timer *ngIf="currentTime.value < 0"></app-tomatoe-timer>
-<div class="home-timer-container mt-4">
-    <div>{{ currentTime | async | timestamp : 'hour' }} : {{ currentTime | async | timestamp : 'minute' }} : {{ currentTime | async | timestamp : 'second' }}</div>
-    <div>{{ _startTimer }}</div>
-    <button [disabled]="_startTimer == 'start'" type="button" (click)="startTimer()">Start Saucin'</button>
-    <button [disabled]="_startTimer == 'stop'" type="button" (click)="stopTimer()">Stop Saucin'</button>
-    <button type="button" (click)="resetTimer()">Reset</button>
+<div class="home-timer-container my-4">
+    <h3 class="my-3">{{ currentTime | async | timestamp : 'hour' }} : {{ currentTime | async | timestamp : 'minute' }} : {{ currentTime | async | timestamp : 'second' }}</h3>
+    <button [disabled]="_startTimer == 'start'" type="button" (click)="startTimer()" class="btn btn-primary">Start Saucin'</button>
+    <button [disabled]="_startTimer == 'stop'" type="button" (click)="stopTimer()" class="btn btn-danger">Stop Saucin'</button>
+    <button type="button" (click)="resetTimer()" class="btn btn-warning">Reset Saucin'</button>
 </div>
