--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,7 +2,7 @@
 @import './abstracts/variables';
 @import './abstracts/mixins';
 // Base
-
+@import './base/typography';
 // Components
 @import './components/pomodoro-timer';
 @import './components/tomatoe-timer';
