--- a/src/styles/components/_pomodoro-timer.scss
+++ b/src/styles/components/_pomodoro-timer.scss
@@ -1,10 +1,8 @@
 .pomodoro-growing-timer {
   position: relative;
   display: flex;
-//   flex-wrap: wrap;
-
+  align-items: center;
   justify-content: center;
-
 }
 
 .pomodoro-completed-size {
