--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-pomodoro-timer *ngIf="currentTime.value >= 0" [_startTimer]="_startTimer"></app-pomodoro-timer>
+<app-pomodoro-timer *ngIf="currentTime.value >= 0" [startTimer]="_startTimer"></app-pomodoro-timer>
 <app-tomatoe-timer *ngIf="currentTime.value < 0"></app-tomatoe-timer>
 <div class="home-timer-container my-4">
     <h3 class="my-3">{{ currentTime | async | timestamp : 'hour' }} : {{ currentTime | async | timestamp : 'minute' }} : {{ currentTime | async | timestamp : 'second' }}</h3>
@@ -6,3 +6,5 @@
     <button [disabled]="_startTimer == 'stop'" type="button" (click)="stopTimer()" class="btn btn-danger">Stop Saucin'</button>
     <button type="button" (click)="resetTimer()" class="btn btn-warning">Reset Saucin'</button>
 </div>
+
+<button type="button" (click)="pushNotificationDemoTest()" class="btn btn-primary">Start Push notifications demo test</button>
